crates/ars-components/src/input/search_input/snapshots/ars_components__input__search_input__tests__search_input_clear_trigger_visible_snapshot.snap
---
source: crates/ars-components/src/input/search_input/mod.rs
expression: snapshot_attrs(&api.clear_trigger_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "clear-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "search-input",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Clear search",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
