crates/ars-components/src/input/search_input/snapshots/ars_components__input__search_input__tests__search_input_error_message_snapshot.snap
---
source: crates/ars-components/src/input/search_input/mod.rs
expression: snapshot_attrs(&api.error_message_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "error-message",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "search-input",
            ),
        ),
        (
            Aria(
                Live,
            ),
            String(
                "polite",
            ),
        ),
        (
            Id,
            String(
                "search-error-message",
            ),
        ),
    ],
    styles: [],
}
