crates/ars-components/src/input/search_input/snapshots/ars_components__input__search_input__tests__search_input_input_default_snapshot.snap
---
source: crates/ars-components/src/input/search_input/mod.rs
expression: snapshot_attrs(&api.input_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "search-input",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "search-label",
            ),
        ),
        (
            Id,
            String(
                "search-input",
            ),
        ),
        (
            Type,
            String(
                "search",
            ),
        ),
        (
            Value,
            String(
                "",
            ),
        ),
    ],
    styles: [],
}
