crates/ars-components/src/input/search_input/snapshots/ars_components__input__search_input__tests__search_input_input_with_metadata_snapshot.snap
---
source: crates/ars-components/src/input/search_input/mod.rs
expression: snapshot_attrs(&api.input_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "search-input",
            ),
        ),
        (
            Aria(
                ErrorMessage,
            ),
            String(
                "search-error-message",
            ),
        ),
        (
            Aria(
                Invalid,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "search-label",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "search-error-message",
            ),
        ),
        (
            Id,
            String(
                "search-input",
            ),
        ),
        (
            Form,
            String(
                "results",
            ),
        ),
        (
            Name,
            String(
                "q",
            ),
        ),
        (
            Placeholder,
            String(
                "Search...",
            ),
        ),
        (
            Required,
            Bool(
                true,
            ),
        ),
        (
            Type,
            String(
                "search",
            ),
        ),
        (
            Value,
            String(
                "rust",
            ),
        ),
    ],
    styles: [],
}
