crates/ars-components/src/input/search_input/snapshots/ars_components__input__search_input__tests__search_input_loading_indicator_snapshot.snap
---
source: crates/ars-components/src/input/search_input/mod.rs
expression: snapshot_attrs(&api.loading_indicator_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "loading-indicator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "search-input",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [],
}
